new bios brian kendra tara

--- a/about_jgc/content-team.html
+++ b/about_jgc/content-team.html
@@ -85,7 +85,11 @@
 (650) 498-4889<br>	  
 <p><a href="mailto:nduong@stanford.edu">nduong@stanford.edu</a></p>
           <br>
-
+ <a class="header-link" href="/about_jgc/team_bios/kendra.html">Kendra Fehrer</a>
+	  <p>Social Science Research Associate</p>
+(650) 724-8462<br>	 
+ <p><a href="mailto:kcfehrer@stanford.edu">kcfehrer@stanford.edu</a></p>
+          <br>
           <a class="header-link" href="/about_jgc/team_bios/mary.html">Mary Hofstedt</a>
 	  <p>Program Manager</p>
 (650) 736-8594<br>	 
@@ -141,16 +145,14 @@
 	
 	    <hr class="short-thick-rule">
 
-	  <a class="header-link" href="/about_jgc/team_bios/maribel.html">Maribel Santiago</a>
+  <a class="header-link" href="/about_jgc/team_bios/tara.html">Tara Chiatovich</a>
 	  <p>Graduate Research Assistant</p>
-	  <p><a href="mailto:maribels@stanford.edu">maribels@stanford.edu</a></p>
+	  <p><a href="mailto:tarachiatov@stanford.edu">tarachiatov@stanford.edu</a></p>
           <br>
-
-	  <a class="header-link" href="/about_jgc/team_bios/lisha.html">Li Sha</a>
+  <a class="header-link" href="/about_jgc/team_bios/brian.html">Brian Holzman</a>
 	  <p>Graduate Research Assistant</p>
-	  <p><a href="mailto:lisha5@stanford.edu">lisha5@stanford.edu</a></p>
+	  <p><a href="mailto:tarachiatov@stanford.edu">bholzman@stanford.edu</a></p>
           <br>
-
   	  <a class="header-link" href="/about_jgc/team_bios/jim.html">Jim Soland</a>
 	  <p>Graduate Research Assistant</p>
 	  <p><a href="mailto:jsoland@stanford.edu">jsoland@stanford.edu</a></p>
@@ -161,7 +163,13 @@
 	  <p><a href="mailto:imehw@stanford.edu">imehw@stanford.edu</a></p>
           <br>
 
-  	               </div>
+  		    <hr class="short-thick-rule">
+
+<a class="header-link" href="/about_jgc/team_bios/carlo.html">Carlo Pasco</a>
+	  <p>Stanford Shinnyo Fellow</p>
+	  <p><a href="mailto:jcpasco@stanford.edu">jcpasco@stanford.edu</a></p>
+          <br>
+               </div>
            </div>
 
          </div>
