many content changes from Leslie

--- a/about_jgc/content-team.html
+++ b/about_jgc/content-team.html
@@ -95,7 +95,11 @@
 (650) 736-8594<br>	 
  <p><a href="mailto:hofstedt@stanford.edu">hofstedt@stanford.edu</a></p>
           <br>
-
+<a class="header-link" href="/about_jgc/team_bios/judy.html">Judy Liang</a>
+	  <p>CORE Project Facilitator</p>
+(650) 736-6076<br>	  
+<p><a href="mailto:rlondon@stanford.edu">jcliang@stanford.edu</a></p>
+          <br>
  	  <a class="header-link" href="/about_jgc/team_bios/rebecca.html">Rebecca London</a>
 	  <p>Senior Researcher</p>
 (650) 736-6076<br>	  
@@ -106,7 +110,7 @@
    	    <div class="column-inner-box">
 
  		<a class="header-link" href="/about_jgc/team_bios/nancy.html">Nancy Mancini</a>
-	  <p>Communications Manager</p>
+	  <p>Communications Director</p>
 (650) 724-0713<br>
 	  <p><a href="mailto:nmancini@stanford.edu">nmancini@stanford.edu</a></p>
           <br>
@@ -144,7 +148,10 @@
 <p><a href="mailto:westrich@stanford.edu">westrich@stanford.edu</a></p>
 	
 	    <hr class="short-thick-rule">
-
+<a class="header-link" href="/about_jgc/team_bios/maryam.html">Maryam Attai</a>
+	  <p>Graduate Research Assistant</p>
+	  <p><a href="mailto:maryamlucia@gmail.com">maryamlucia@gmail.com</a></p>
+<br>
   <a class="header-link" href="/about_jgc/team_bios/tara.html">Tara Chiatovich</a>
 	  <p>Graduate Research Assistant</p>
 	  <p><a href="mailto:tarachiatov@stanford.edu">tarachiatov@stanford.edu</a></p>
