--- a/our_work/content-cris.html
+++ b/our_work/content-cris.html
@@ -32,6 +32,7 @@
 <br>
 <h1 class="content-text-header">Publications</h1>
 <ul>
+<li><a href="/resources/publications/collegereadinesslitreview.pdf">Analyzing Evidence of College Readiness: A Tri-Level Empirical & Conceptual Framework (Working Paper)</a></li>
 <li><a href="/our_work/cris/VUE35.pdf">Voices in Urban Education 35: College Readiness Indicator Systems: Building Effective Supports for Students</a></li>
 </ul>
     </div> <!--end right side box div-->
