--- a/our_work/content-missionpromise.html
+++ b/our_work/content-missionpromise.html
@@ -14,7 +14,7 @@
       <h1 class="content-text-header">Partner Organizations</h1>
 
     <ul>
-<li>Mission Economic Development Fund</li>
+<li>Mission Economic Development Agency</li>
 
 </ul>
 <br>
