--- a/about_jgc/team_bios/content-nancy.html
+++ b/about_jgc/team_bios/content-nancy.html
@@ -4,13 +4,13 @@
 
         <div class="jgc-content-feature-item-left">
    <h1 class="content-text-header">Nancy Mancini</h1>
-<span class="content-bold">Communications Manager</span>
+<span class="content-bold">Communications Director</span>
 <br>
 <br>
 
 <p>
 <img class="bio-std" src="/images/team/team_pics_resized/Nancy_resized.jpg">
-Nancy Mancini joined the staff of the John W. Gardner Center as Communications Manager in December 2011. In this role she directs activities that increase the visibility of the Center among its many audiences locally and nationally. Nancy came to the Gardner Center from the University of San Francisco where she was Director of External Relations for University Advancement.</p>
+Nancy Mancini joined the staff of the John W. Gardner Center in December 2011. In this role she directs activities that increase the visibility of the Center among its many audiences locally and nationally. Nancy came to the Gardner Center from the University of San Francisco where she was Director of External Relations for University Advancement.</p>
 <br>
 <p>Nancy’s prior experience at Stanford includes the Office of Development and the School of Engineering where she held stewardship, donor, and development communications positions. She came to higher education communications and marketing from the advertising agency business. At McCann-Erickson and Foote, Cone & Belding, Nancy worked on branding, communications strategy, and copy development for national advertisers. As a volunteer she has provided communications and marketing counsel to numerous organizations including the Edgewood Center for Children and Families, California Pacific Medical Center Department of Pediatrics, and the Coyote Point Museum for Environmental Education (now CuriOdyssey). Nancy holds a Bachelor’s degree in Fine Art from California State University, Sacramento.</p>
 
