--- a/resources/content-issue-briefs.html
+++ b/resources/content-issue-briefs.html
@@ -7,6 +7,7 @@
 <br>
 <span class="content-bold">2013</span>
 <ul style="list-style: none;">
+<li><a href="/resources/publications/PYDinRWC2013.pdf" class="link-no-underline">Positive Youth Development in Redwood City, 2012-2013</a></li>
 <li><a href="/resources/publications/BtSIssueBrief10.3.13.pdf" class="link-no-underline">Developing Alternative Placement Criteria for English Courses at City College of San Francisco</a></li>
 <li><a href="/resources/publications/DCYF_IB_7.2013.pdf" class="link-no-underline">Participation Among San Francisco Unified School District Students in Programs Offered by the Department of Children, Youth, & Their Families</a></li>
 <li><a href="/resources/publications/SHSS_IB_7.2013.pdf" class="link-no-underline">Examining Students' Perceptions of the School Environment: Sequoia High School's School Climate Survey</a></li>
