updated map link

--- a/about_jgc/content-directions.html
+++ b/about_jgc/content-directions.html
@@ -20,7 +20,7 @@ Stanford, CA 94305-2068<br>
 <br>
 <p>The closest visitor parking is available on Lasuen Street, on Memorial Way, and on the Campus Oval. Parking is enforced Monday-Friday, 8:00 a.m. to 4:00 p.m.</p>
 <br>
-<p>All locations can be found at F-9 on the <a class="link-underlined" href="http://transportation.stanford.edu/pdf/parking-map.pdf">campus map.</a></p>
+<p>All locations can be found at F-9 on the <a class="link-underlined" href="https://docs.google.com/viewer?url=http%3A%2F%2Fmaps.stanford.edu%2Fsites%2Fall%2Flbre-shared%2Ffiles%2Fmaps%2Ffiles%2Fshared%2Ffile%2Fmaps_records%2FParking_And_Circulation_Map.pdf">campus map.</a></p>
 
 <br>
 <a name="By Car"></a> <h1 class="content-text-header">BY CAR</h1><br>
