--- a/our_work/content-allwork.html
+++ b/our_work/content-allwork.html
@@ -34,7 +34,7 @@
 	  <h1 class="content-text-header">E</h1>
 		<ul style="list-style: none;">
 			<li><a href="ece.html">Early Childhood Education Linkages</a></li>
-<li><a href="oepacollaborative.html">East Palo Alto Mega-Network Continuum of Care</a></li>
+<li><a href="oepacollaborative.html">East Palo Alto Youth Empowerment Strategies for Success</a></li>
 			<li><a href="mapping.html">East Palo  Alto Youth Resource Mapping</a></li>
 			<li><a href="youth_art_music.html">East Palo Alto Arts, Music and Cultural Center</a></li>
 			<li><a href="english_learner.html">English Learner After School Program Participation in Redwood City</a></li>
