--- a/our_work/content-oepacollaborative.html
+++ b/our_work/content-oepacollaborative.html
@@ -3,7 +3,7 @@
       <div id="jgc-content-features">
 
         <div class="jgc-content-feature-item-left">
-      <h1 class ="title-page-header-big">East Palo Alto Mega-Network Continuum of Care (MCOC)</h1>
+      <h1 class ="title-page-header-big">East Palo Alto Youth Empowerment Strategies for Success (YESS)</h1>
 
 <br>
 
@@ -33,13 +33,13 @@
 
 <p>East Palo Alto (EPA) is a community with great resources in its many grassroots organizations and youth- and family-serving institutions.  While these groups share a deep commitment to serving the community’s youth, the majority have traditionally operated in relative isolation with few structures to support collaboration around a shared youth agenda. Also, many of these organizations and institutions need more capacity and infrastructure to collect and analyze data to inform their work—not only within their own organizations, but across the community’s “youth sector.” An opportunity exists to build a community-wide approach to youth development that translates into positive outcomes for EPA youth.</p>
 <br>
-<p>The Gardner Center is one of 35 youth-serving organizations participating in the Mega-Network Continuum of Care (MCOC), an initiative convened by One East Palo Alto. The assets we bring to MCOC include:</p>
+<p>The Gardner Center is one of 35 youth-serving organizations participating in the Youth Empowerment Strategies for Success (YESS), an initiative convened by One East Palo Alto. The assets we bring to YESS include:</p>
 <br>
-<p><b>The Youth Data Archive.</b> So far, we have collaborated with fellow MCOC members to identify research questions. Our first analysis examined graduation rates for EPA youth. We are also focusing on linking participation patterns across the services and programs offered by MCOC members. In so doing, we can identify characteristics of youth who are not being served by MCOC member organizations and discover potential gaps in programming necessary to meet the community’s needs. We anticipate the analysis results will inform members’ recruitment and targeting efforts to better reach underserved groups. The results of this analysis will help the MCOC take a broader youth sector approach to viewing its collective work and the ways that youth and families navigate the supports available to them.</p>
+<p><b>The Youth Data Archive.</b> So far, we have collaborated with fellow YESS members to identify research questions. Our first analysis examined graduation rates for EPA youth. We are also focusing on linking participation patterns across the services and programs offered by YESS members. In so doing, we can identify characteristics of youth who are not being served by YESS member organizations and discover potential gaps in programming necessary to meet the community’s needs. We anticipate the analysis results will inform members’ recruitment and targeting efforts to better reach underserved groups. The results of this analysis will help the YESS take a broader youth sector approach to viewing its collective work and the ways that youth and families navigate the supports available to them.</p>
 <br>
-<p><b>Capacity Building for Data Collection and Sharing.</b> We are working closely with our fellow MCOC members to build their capacity to collect data and use findings to inform practice.</p>
+<p><b>Capacity Building for Data Collection and Sharing.</b> We are working closely with our fellow YESS members to build their capacity to collect data and use findings to inform practice.</p>
 <br>
-<p><b>Youth Development Research and Knowledge.</b> We share current research and best practices on youth development with other MCOC members. As such, we are helping to strengthen shared frameworks and language across program settings and to foster best practices in OST settings.</p>
+<p><b>Youth Development Research and Knowledge.</b> We share current research and best practices on youth development with other YESS members. As such, we are helping to strengthen shared frameworks and language across program settings and to foster best practices in OST settings.</p>
 </ul>
          </div>
 
