--- a/about_jgc/content-team.html
+++ b/about_jgc/content-team.html
@@ -17,9 +17,10 @@
 
   <a class="header-link" href="/about_jgc/team_bios/prudence.html">Prudence Carter</a>
 	  <p>Faculty Director</p>
-<p>Professor of Education & (by courtesy) Sociology, Stanford University
+<p>Professor of Education & (by courtesy) Sociology
 	  <p><a href="mailto:plcarter@stanford.edu">plcarter@stanford.edu</a></p>
-	  <br>
+	  (650) 736-7532<br>
+<br>
 
 	  <a class="header-link" href="/about_jgc/team_bios/amy.html">Amy Gerstein</a>
 	  <p>Executive Director</p>
@@ -28,7 +29,7 @@
 	  <br>
  <a class="header-link" href="/about_jgc/team_bios/milbrey.html">Milbrey McLaughlin</a>
 	  <p>Founding Director</p>
-	  <p>David Jacks Professor of Education & Public Policy, Stanford University</p>
+	  <p>David Jacks Professor of Education & Public Policy, Emerita</p>
 (650) 323-6736<br>
 	  <p><a href="mailto:milbrey@stanford.edu">milbrey@stanford.edu</a></p>
 	  <br>
@@ -65,12 +66,6 @@
 (650) 497-4008<br>
 	  <p><a href="mailto:carew@stanford.edu">carew@stanford.edu</a></p>
 <br>
-          <a class="header-link" href="/about_jgc/team_bios/sebastian.html">Sebastian Castrechini</a>
-	  <p>Senior Policy Analyst</p>
-(650) 721-1633<br>
-	  <p><a href="mailto:sebcast@stanford.edu">sebcast@stanford.edu</a></p>
-          <br>
-
   	  <a class="header-link" href="/about_jgc/team_bios/larissa.html">Larissa Collins</a>
 	  <p>Senior Administrative Associate</p>
 (650) 723-3099<br>	  
