--- a/about_jgc/team_bios/content-milbrey.html
+++ b/about_jgc/team_bios/content-milbrey.html
@@ -5,7 +5,7 @@
         <div class="jgc-content-feature-item-left">
           <h1 class="content-text-header">Milbrey W. McLaughlin</h1>
 <span class="content-bold">Founding Director</span><br>
-<span class="content-italic">David Jacks Professor of Education and Public Policy, Stanford University</span><br>
+<span class="content-italic">David Jacks Professor of Education and Public Policy, Emerita</span><br>
 <br>
 <p>
 <img class="bio-std" src="/images/team/Milbrey.jpg">
