--- a/about_jgc/team_bios/content-prudence.html
+++ b/about_jgc/team_bios/content-prudence.html
@@ -5,7 +5,7 @@
         <div class="jgc-content-feature-item-left">
            <h1 class="content-text-header">Prudence Carter</h1>
            <span class="content-bold">Faculty Director</span><br>
-<span class="content-bold">Professor of Education and (by courtesy) Sociology, Stanford University</span><br>
+<span class="content-bold">Professor of Education and (by courtesy) Sociology</span><br>
 	   <br>
 	  <p>
           <img class="bio-std" src="/images/team/prudence.jpg">
