--- a/about_jgc/content-team.html
+++ b/about_jgc/content-team.html
@@ -87,7 +87,7 @@
  <p><a href="mailto:kcfehrer@stanford.edu">kcfehrer@stanford.edu</a></p>
           <br>
           <a class="header-link" href="/about_jgc/team_bios/mary.html">Mary Hofstedt</a>
-	  <p>Program Manager</p>
+	  <p>Senior Community Engagement Associate</p>
 (650) 736-8594<br>	 
  <p><a href="mailto:hofstedt@stanford.edu">hofstedt@stanford.edu</a></p>
           <br>
