--- a/about_jgc/team_bios/content-mary.html
+++ b/about_jgc/team_bios/content-mary.html
@@ -4,13 +4,11 @@
 
         <div class="jgc-content-feature-item-left">
           <h1 class="content-text-header">Mary Hofstedt, Ed.M.</h1>
-<span class="content-bold">Program Manager</span><br>
+<span class="content-bold">Senior Community Engagement Associate</span><br>
 <br>
 <p>
 <img class="bio-std" src="/images/team/Mary.jpg">
-Mary Hofstedt is a Youth Development Program and Policy
-Specialist at the Gardner Center. Mary directed the Youth Engaged in
-Leadership and Learning (YELL) program in Redwood City
+Mary Hofstedt is a Senior Community Engagement Associate at the Gardner Center. Mary directed the Youth Engaged in Leadership and Learning (YELL) program in Redwood City
 from 2003 to 2006, and has trained program staff,
 mentors, and Stanford undergraduate and graduate
 students in Youth Development theory and practice. She also provides facilitation
