--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@ document.createElement("article" );
 <li><a class="link-homepage-feature" href="https://www1.gotomeeting.com/register/924796441">December 5, 2013<br>
 American Youth Policy Forum webinar on Research, Policy, & Practice</a><br><br>	
                               
-	  <li><a class="link-homepage-feature" href="http://edpolicy.stanford.edu/events/1013">October 2013 to April 2014<br>
-Brown Bag Seminar Series</a><br><br>					
+	  <li><a class="link-homepage-feature" href="http://edpolicy.stanford.edu/events/1017">December 9, 2013<br>
+Brown Bag Seminar Series: Michael Wald</a><br><br>					
 
 
 
