search and menu fix

--- a/index.html
+++ b/index.html
@@ -32,19 +32,21 @@ var __adobewebfontsappname__ = "muse";
       <a class="nonblock nontext grpelem" id="u7425" href="https://ed.stanford.edu" target="_blank"><!-- simple frame --></a>
      </div>
      <div class="grpelem" id="u7686"><!-- custom html -->
-      <script>
-  (function() {
-    var cx = '013528277934726309515:pupxteqvsfm';
-    var gcse = document.createElement('script');
-    gcse.type = 'text/javascript';
-    gcse.async = true;
-    gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
-        '//www.google.com/cse/cse.js?cx=' + cx;
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(gcse, s);
-  })();
-</script>
-<gcse:search></gcse:search>
+
+   <script>
+     (function() {
+       var cx = '014221189792540735175:beufblrgl0a';
+       var gcse = document.createElement('script');
+       gcse.type = 'text/javascript';
+       gcse.async = true;
+       gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
+           '//www.google.com/cse/cse.js?cx=' + cx;
+       var s = document.getElementsByTagName('script')[0];
+       s.parentNode.insertBefore(gcse, s);
+     })();
+   </script>
+   <gcse:searchbox-only></gcse:searchbox-only>
+
 </div>
     </div>
     <div class="clearfix colelem" id="pu7574-3"><!-- group -->
@@ -66,7 +68,7 @@ var __adobewebfontsappname__ = "muse";
          <div class="SubMenu  MenuLevel1 clearfix" id="u7022"><!-- vertical box -->
           <ul class="SubMenuView clearfix colelem" id="u7023"><!-- vertical box -->
            <li class="MenuItemContainer clearfix colelem" id="u7052"><!-- horizontal box -->
-            <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u7055" href="http:/jgc.stanford.edu/about_jgc/welcome.html"><!-- vertical box --><div class="MenuItemLabel NoWrap clearfix colelem" id="u7056-4"><!-- content --><p>Welcome</p></div></a>
+            <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u7041" href="http://jgc.stanford.edu/about_jgc/welcome.html"><!-- vertical box --><div class="MenuItemLabel NoWrap clearfix colelem" id="u7043-4"><!-- content --><p>Welcome</p></div></a>
            </li>
            <li class="MenuItemContainer clearfix colelem" id="u7038"><!-- horizontal box -->
             <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u7041" href="http://jgc.stanford.edu/about_jgc/team.html"><!-- vertical box --><div class="MenuItemLabel NoWrap clearfix colelem" id="u7043-4"><!-- content --><p>Who We Are</p></div></a>
