--- a/about_jgc/content-jobs.html
+++ b/about_jgc/content-jobs.html
@@ -8,6 +8,8 @@
 <br>
 <br>
 <a class="link-underlined" href="https://stanfordcareers.stanford.edu/job-search?jobId=18185" target="_blank">Policy Analyst</a>
+<br>
+<a class="link-underlined" href="https://stanfordcareers.stanford.edu/job-search?jobId=22385" target="_blank">Quantitative Research Associate</a>
 
 
          </div>
