--- a/index.bak.html
+++ b/index.bak.html
@@ -140,10 +140,8 @@ document.createElement("article" );
 				</div>
 				<div class="feature_text">
 					<p>
-
-                              
-	  <li><a class="link-homepage-feature" href="http://edpolicy.stanford.edu/events/1017">December 9, 2013<br>
-Brown Bag Seminar Series: Michael Wald</a><br><br>					
+	  <li><a class="link-homepage-feature" href="http://edpolicy.stanford.edu/events/1013"> 2013-14 School Year<br>
+Brown Bag Seminar Series</a><br><br>					
 
 
 
