--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@ document.createElement("article" );
 					<p>
 
                               
-	  <li><a class="link-homepage-feature" href="http://edpolicy.stanford.edu/events/1017">December 9, 2013<br>
-Brown Bag Seminar Series: Michael Wald</a><br><br>					
+	  <li><a class="link-homepage-feature" href="http://edpolicy.stanford.edu/events/1017">2013-2014<br>
+Brown Bag Seminar Series</a><br><br>					
 
 
 
