New sub page layout iteration

--- a/index.new.html
+++ b/index.new.html
@@ -83,6 +83,9 @@ var __adobewebfontsappname__ = "muse";
           <li class="MenuItemContainer clearfix colelem" id="u8039"><!-- horizontal box -->
            <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u8040" href="/about_jgc/welcome.html"><!-- vertical box --><div class="MenuItemLabel NoWrap clearfix colelem" id="u8042-4"><!-- content --><p>Welcome</p></div></a>
           </li>
+          <li class="MenuItemContainer clearfix colelem" id="u8039"><!-- horizontal box -->
+           <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u8040" href="/about_jgc/welcome.html"><!-- vertical box --><div class="MenuItemLabel NoWrap clearfix colelem" id="u8042-4"><!-- content --><p>Welcome</p></div></a>
+          </li>
           <li class="MenuItemContainer clearfix colelem" id="u8046"><!-- horizontal box -->
            <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u8049" href="/about_jgc/team.html"><!-- vertical box --><div class="MenuItemLabel NoWrap clearfix colelem" id="u8050-4"><!-- content --><p>Who We Are</p></div></a>
           </li>
@@ -214,17 +217,17 @@ var __adobewebfontsappname__ = "muse";
        <p id="u1039-4"><a class="nonblock" href="http://jgc.stanford.edu" target="_blank"><span id="u1039">Gardner Perspective</span></a><span id="u1039-3">s</span></p>
       </div>
       <div class="clip_frame grpelem" id="u1111"><!-- image -->
-       <img class="block" id="u1111_img" src="images/jorge-signature-jj2.png" alt="" width="144" height="52"/>
+       <img class="block" id="u1111_img" src="" alt="" width="144" height="52"/>
       </div>
       <div class="grpelem" id="pu1023"><!-- inclusion -->
        <div id="u1023"><!-- simple frame --></div>
        <div class="clearfix" id="pu1040-13"><!-- group -->
         <div class="clearfix grpelem" id="u1040-13"><!-- content -->
-         <p id="u1040-2">CALIFORNIA’S</p>
-         <p id="u1040-4">CONTINUATION HIGH SCHOOLS</p>
-         <p id="u1040-6">by Jorge Ruiz de Velasco,</p>
-         <p id="u1040-8">Associate Director</p>
-         <p id="u1040-11"><br/>California’s approximately 500 continuation high schools are estimated to serve more than 115,000 California high school students each year—a number that approaches almost 10 percent of all high school students and as many as one of every seven high school seniors.</p>
+         <p id="u1040-2">STEPS TO ADDRESSING</p>
+         <p id="u1040-4">TRUANCY & CHRONIC ABSENTEEISM</p>
+         <p id="u1040-6"></p>
+         <p id="u1040-8"></p>
+         <p id="u1040-11"><br/>Addressing chronic absenteeism is a continuous process that involves understanding its prevalence and identifying characteristics of chronically absent students, then identifying, applying, and tracking interventions, assessing their effectiveness, and adjusting them accordingly. A core piece of addressing absenteeism involves creating a data system which sits at the center of all subsequent steps in the process.</p>
         </div>
        </div>
       </div>
@@ -234,8 +237,8 @@ var __adobewebfontsappname__ = "muse";
        <p><a class="nonblock" href="http://jgc.stanford.edu" target="_blank">Publications</a></p>
       </div>
       <div class="clearfix colelem" id="u1181-9"><!-- content -->
-       <p id="u1181-3"><span id="u1181">Book caption goes here. Caption headlines are always in orange.</span></p>
-       <p id="u1181-7">Say something about the book here.You can say enough to fill this little block of space. Or not. <span id="u1181-5">From Data to Action</span>&nbsp;is the author's second book, etc., etc.</p>
+       <p id="u1181-3"><span id="u1181">YELL Curriculum, 2nd Edition</span></p>
+       <p id="u1181-7">Youth Engaged in Leadership and Learning is a set of curricular resources available to anyone interested in training and engaging youth as partners and leaders within their communities. The YELL Handbook, with over 300 pages of structured agendas and planning resources, is available for free download. This resource is currently used to support youth leadership development and action in a variety of contexts throughout the United States, as well as in international settings. <span id="u1181-5">From Data to Action</span>&nbsp;is the author's second book, etc., etc.</p>
       </div>
      </div>
      <div class="shadow clearfix grpelem" id="u1046"><!-- column -->
@@ -243,10 +246,10 @@ var __adobewebfontsappname__ = "muse";
        <p id="u1047-3"><a class="nonblock" href="http://jgc.stanford.edu" target="_blank"><span id="u1047">EVENTS</span></a></p>
       </div>
       <div class="clearfix colelem" id="u1182-12"><!-- content -->
-       <p><span id="u1182">Prudence Carter:</span></p>
-       <p><span id="u1182-3">The Workshop on Poverty, Inequality, and Education</span></p>
+       <p><span id="u1182">Carol Dweck</span></p>
+       <p><span id="u1182-3">Mindsets: Increasing Educational Equity and Opportunity</span></p>
        <p>&nbsp;</p>
-       <p>DATE: Tuesday, October 8, 2013&nbsp; TIME: 5:15 pm — 7:00 pm</p>
+       <p>DATE: February 24, 2014 &nbsp; TIME: Noon - 1:30 pm</p>
        <p>LOCATION: CERAS Learning Hall, Stanford University</p>
        <p>&nbsp;</p>
       </div>
@@ -254,16 +257,16 @@ var __adobewebfontsappname__ = "muse";
      <div class="grpelem" id="u1022"><!-- simple frame --></div>
      <div class="grpelem" id="u7409"><!-- simple frame --></div>
      <div class="Orange-Default-Link-Style clearfix grpelem" id="u1035-5"><!-- content -->
-      <p><a class="nonblock" href="http://jgc.stanford.edu">A New Approach to Placement Criteria</a></p>
+      <p><a class="nonblock" href="http://jgc.stanford.edu">Early Childhood Community Schools Linkages</a></p>
      </div>
      <div class="clearfix grpelem" id="u7466-4"><!-- content -->
-      <p>In a typical year, approximately 90% of San Francisco Unified School District graduates who enroll at City College of San Francisco (CCSF) are placed into remedial English. With the goal of improving completion rates at CCSF by reducing remediation, the lorem ipsum dolor set lorem ipsum dolor set Gardner Center and Bridge to Success have partnered to use data to identify criteria other than placement tests that would enable students to streamline their path to college&#45;level coursework and graduation.</p>
+      <p>National attention increasingly focuses on the importance of children’s development in their early years. While there are a number of efforts in place to support young children and their families, many focus on one of two domains: either improving early childhood care or education or improving elementary education. Research suggests, however, that there is an essential third domain to attend to in our work to support young children: improving the quality and continuity of a child’s experience and her access to essential supports as she transitions from early childhood care or education into the elementary grades.</p>
      </div>
      <div class="clip_frame grpelem" id="u7447"><!-- image -->
       <img class="block" id="u7447_img" src="images/graciela-u7447.jpg" alt="" width="105" height="157"/>
      </div>
      <div class="clearfix grpelem" id="u7464-4"><!-- content -->
-      <p>When students are not in school, they miss the lorem ipsum dolor set opportunity to grow academically, socially, and emotionally. These skills are critical for continued success in school, in the community, and onward into adulthood. At the request of the Redwood City 2020 collaborative, the Gardner Center conducted a linked&#45;data analysis to explore the causes consequences that are present the lorem ipsum dolor set lorem ipsum dolor set in the community.</p>
+      <p>More students than ever are enrolling in college after high school, but concerns are growing among policymakers, educational leaders, the business community, and other stakeholders because many of them are not college ready. A new framework from the CRIS initiative provides guidance for schools and districts to implement a system of indicators and supports for students who are off track for post-secondary success. </p>
      </div>
      <div class="clearfix grpelem" id="u7524"><!-- group -->
       <div class="grpelem" id="u7504"><!-- custom html -->
