new sub look iteration 2 fixing relative link issue

--- a/content-menu-top-new.html
+++ b/content-menu-top-new.html
@@ -2,9 +2,9 @@
    <div class="position_content" id="page_position_content">
     <div class="clearfix colelem" id="pu8202"><!-- group -->
      <div class="clip_frame grpelem" id="u8202"><!-- image -->
-      <img class="block" id="u8202_img" src="images/school-of-ed-logo.gif" alt="" width="281" height="45"/>
+      <img class="block" id="u8202_img" src="/images/school-of-ed-logo.gif" alt="" width="281" height="45"/>
      </div>
-     <a class="nonblock nontext clip_frame grpelem" id="u8220" href="http://jgc.stanford.edu"><!-- image --><img class="block" id="u8220_img" src="images/jgc-logo.gif" alt="" width="740" height="43"/></a>
+     <a class="nonblock nontext clip_frame grpelem" id="u8220" href="http://jgc.stanford.edu"><!-- image --><img class="block" id="u8220_img" src="/images/jgc-logo.gif" alt="" width="740" height="43"/></a>
      <div class="grpelem" id="u7686"><!-- custom html -->
 
    <script>
