--- a/content-head-new.html
+++ b/content-head-new.html
@@ -11,12 +11,12 @@
   <meta property="og:site_name" content="JGC">
   <meta property="fb:admins" content="605843081" />
   
-  <link rel="shortcut icon" href="images/home-favicon.ico?218918666"/>
+  <link rel="shortcut icon" href="/images/home-favicon.ico?218918666"/>
   <title>HOME</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?3783636760"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?357753367"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?3971815365" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="/css/site_global.css?3783636760"/>
+  <link rel="stylesheet" type="text/css" href="/css/master_a-master.css?357753367"/>
+  <link rel="stylesheet" type="text/css" href="/css/index.css?3971815365" id="pagesheet"/>
   <!-- CSS old: implied media="all" -->
   <link rel="stylesheet" href="/css/style-new.css?v=300">
   <!-- Other scripts -->
