--- a/content-head-new.html
+++ b/content-head-new.html
@@ -24,10 +24,10 @@
    if (document.location.protocol != 'https:') document.write('\x3Cscript src="http://musecdn.businesscatalyst.com/scripts/4.0/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   window.jQuery || document.write('\x3Cscript src="scripts/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
+   window.jQuery || document.write('\x3Cscript src="/scripts/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
 </script>
-  <script src="scripts/museutils.js?117816282" type="text/javascript"></script>
-  <script src="scripts/jquery.musemenu.js?32367222" type="text/javascript"></script>
+  <script src="/scripts/museutils.js?117816282" type="text/javascript"></script>
+  <script src="/scripts/jquery.musemenu.js?32367222" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    $(document).ready(function() { try {
