fix attempt 2 on who we are

--- a/about_jgc/content-team.html
+++ b/about_jgc/content-team.html
@@ -168,6 +168,8 @@
 	  <p><a href="mailto:jcpasco@stanford.edu">jcpasco@stanford.edu</a></p>
           <br>
 
+           </div>
+
          </div>
 
        </div>
