removing hard coded border from home page and adding margin to content top

--- a/content-menu-top-new.html
+++ b/content-menu-top-new.html
@@ -24,7 +24,7 @@
 </div>
     </div>
     <div class="clearfix colelem" id="pu7574-3"><!-- group -->
-     <div class="clearfix grpelem" id="u7574-3"><!-- content -->
+     <div class="clearfix grpelem" id="u7574-3" style="border-style: none;"><!-- content -->
       <p>&nbsp;</p>
      </div>
      <div class="clearfix grpelem" id="u2433"><!-- group -->
@@ -149,3 +149,5 @@
        </li>
       </ul>
      </div>
+     
+     <br>&nbsp;<br>
