remove new footer file

--- a/about_jgc/welcome.new.html
+++ b/about_jgc/welcome.new.html
@@ -6,7 +6,7 @@
 <body>
 <!--#include virtual="/content-menu-top-new.html" -->
 <!--#include virtual="content-welcome.html" -->
-<!--#include virtual="/content-footer-new.html" -->
+<!--#include virtual="/content-footer.html" -->
 <!--#include virtual="/content-analytics.html" -->
 </body>
 </html>
