--- a/about_jgc/content-team.html
+++ b/about_jgc/content-team.html
@@ -66,6 +66,11 @@
 (650) 497-4008<br>
 	  <p><a href="mailto:carew@stanford.edu">carew@stanford.edu</a></p>
 <br>
+<a class="header-link" href="/about_jgc/team_bios/naomi.html">Naomi Chapman</a>
+	  <p>Community Engagement Associate</p>
+(650) 723-3364<br>
+	  <p><a href="mailto:carew@stanford.edu">naomic@stanford.edu</a></p>
+<br>
   	  <a class="header-link" href="/about_jgc/team_bios/larissa.html">Larissa Collins</a>
 	  <p>Senior Administrative Associate</p>
 (650) 723-3099<br>	  
@@ -87,7 +92,7 @@
  <p><a href="mailto:kcfehrer@stanford.edu">kcfehrer@stanford.edu</a></p>
           <br>
           <a class="header-link" href="/about_jgc/team_bios/mary.html">Mary Hofstedt</a>
-	  <p>Senior Community Engagement Associate</p>
+-	  <p>Senior Community Engagement Associate</p>
 (650) 736-8594<br>	 
  <p><a href="mailto:hofstedt@stanford.edu">hofstedt@stanford.edu</a></p>
           <br>
@@ -139,10 +144,6 @@
 <br> 
 	
 	    <hr class="short-thick-rule">
-<a class="header-link" href="/about_jgc/team_bios/maryam.html">Maryam Attai</a>
-	  <p>Graduate Research Assistant</p>
-	  <p><a href="mailto:maryamlucia@gmail.com">maryamlucia@gmail.com</a></p>
-<br>
   <a class="header-link" href="/about_jgc/team_bios/tara.html">Tara Chiatovich</a>
 	  <p>Graduate Research Assistant</p>
 	  <p><a href="mailto:tarachiatov@stanford.edu">tarachiatov@stanford.edu</a></p>
