--- a/index.new.html
+++ b/index.new.html
@@ -211,7 +211,7 @@ var __adobewebfontsappname__ = "muse";
        <img class="block" id="u1030_img" src="images/red-circle.png" alt="" width="164" height="102"/>
       </div>
       <div class="Link-Style-for-Perspectives-Headline clearfix grpelem" id="u1039-6"><!-- content -->
-       <p id="u1039-4"><a class="nonblock" href="http://jgc.stanford.edu" target="_blank"><span id="u1039">Gardner Perspective</span></a><span id="u1039-3">s</span></p>
+       <p id="u1039-4"><a class="nonblock" href="http://jgc.stanford.edu/resources/policy_fact_sheets/Absence_Interventions_PFS.pdf" target="_blank"><span id="u1039">Gardner Perspective</span></a><span id="u1039-3">s</span></p>
       </div>
       <div class="clip_frame grpelem" id="u1111"><!-- image -->
        <img class="block" id="u1111_img" src="" alt="" width="144" height="52"/>
@@ -231,11 +231,11 @@ var __adobewebfontsappname__ = "muse";
      </div>
      <div class="clearfix grpelem" id="u7525"><!-- column -->
       <div class="clearfix colelem" id="u1037-5"><!-- content -->
-       <p><a class="nonblock" href="http://jgc.stanford.edu" target="_blank">Publications</a></p>
+       <p><a class="nonblock" href="http://jgc.stanford.edu/our_work/yell.html" target="_blank">Publications</a></p>
       </div>
       <div class="clearfix colelem" id="u1181-9"><!-- content -->
        <p id="u1181-3"><span id="u1181">YELL Curriculum, 2nd Edition</span></p>
-       <p id="u1181-7">Youth Engaged in Leadership and Learning is a set of curricular resources available to anyone interested in training and engaging youth as partners and leaders within their communities. The YELL Handbook, with over 300 pages of structured agendas and planning resources, is available for free download. This resource is currently used to support youth leadership development and action in a variety of contexts throughout the United States, as well as in international settings. <span id="u1181-5">From Data to Action</span>&nbsp;is the author's second book, etc., etc.</p>
+       <p id="u1181-7">Youth Engaged in Leadership and Learning is a curriculum available for free download to anyone interested in training and engaging youth as partners and leaders within their communities.</p>
       </div>
      </div>
      <div class="shadow clearfix grpelem" id="u1046"><!-- column -->
@@ -254,10 +254,10 @@ var __adobewebfontsappname__ = "muse";
      <div class="grpelem" id="u1022"><!-- simple frame --></div>
      <div class="grpelem" id="u7409"><!-- simple frame --></div>
      <div class="Orange-Default-Link-Style clearfix grpelem" id="u1035-5"><!-- content -->
-      <p><a class="nonblock" href="http://jgc.stanford.edu">Early Childhood Community Schools Linkages</a></p>
+      <p><a class="nonblock" href="http://gardnercenter.stanford.edu/resources/reports/ECE_Linkages_TOCReport_2013.pdf">Early Childhood Community Schools Linkages</a></p>
      </div>
      <div class="clearfix grpelem" id="u7466-4"><!-- content -->
-      <p>National attention increasingly focuses on the importance of children’s development in their early years. While there are a number of efforts in place to support young children and their families, many focus on one of two domains: either improving early childhood care or education or improving elementary education. Research suggests, however, that there is an essential third domain to attend to in our work to support young children: improving the quality and continuity of a child’s experience and her access to essential supports as she transitions from early childhood care or education into the elementary grades.</p>
+      <p>National attention increasingly focuses on the importance of children’s development in their early years, with much of that focus on one of two domains: either improving early childhood care or education or improving elementary education. Research suggests, however, that there is an essential third domain to attend to in our work to support young children: improving the quality and continuity of a child’s experience and her access to essential supports as she transitions from early childhood care or education into the elementary grades.</p>
      </div>
      <div class="clip_frame grpelem" id="u7447"><!-- image -->
       <img class="block" id="u7447_img" src="images/graciela-u7447.jpg" alt="" width="105" height="157"/>
@@ -276,7 +276,7 @@ var __adobewebfontsappname__ = "muse";
       <p>RESEARCH HIGHLIGHTS</p>
      </div>
      <div class="Orange-Default-Link-Style clearfix grpelem" id="u7545-5"><!-- content -->
-      <p><a class="nonblock" href="http://jgc.stanford.edu">Exploring Causes of Chronic Absenses</a></p>
+      <p><a class="nonblock" href="http://vue.annenberginstitute.org/issues/38/college-readiness">College Readiness Indicator Systems</a></p>
      </div>
      <div class="clearfix grpelem" id="u7546-4"><!-- content -->
       <p>NEWS</p>
