content changes and experimentation with new sub pages

--- a/content-head-new-sub.html
+++ b/content-head-new-sub.html
@@ -12,11 +12,12 @@
   <meta property="fb:admins" content="605843081" />
   
   <link rel="shortcut icon" href="/images/home-favicon.ico?218918666"/>
-  <title>HOME</title>
+  <title>JGC</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="/css/subpage-site_global.css?3965574698"/>
   <link rel="stylesheet" type="text/css" href="/css/subpage-master_a-master.css?3832492267"/>
   <link rel="stylesheet" type="text/css" href="/css/subpage-index.css?280286400" id="pagesheet"/>
+      
   <!-- CSS old: implied media="all" -->
   <link rel="stylesheet" href="/css/style-new.css?v=300">
   <!-- JS includes -->
