--- a/content-head-new2.html
+++ b/content-head-new2.html
@@ -14,9 +14,9 @@
   <link rel="shortcut icon" href="/images/home-favicon.ico?218918666"/>
   <title>HOME</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="/css/subpage-site_global.css?3965574698"/>
-  <link rel="stylesheet" type="text/css" href="/css/subpage-master_a-master.css?3832492267"/>
-  <link rel="stylesheet" type="text/css" href="/css/subpage-index.css?280286400" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="/css/site_global.css?3783636760"/>
+  <link rel="stylesheet" type="text/css" href="/css/master_a-master.css?357753367"/>
+  <link rel="stylesheet" type="text/css" href="/css/index.css?3971815365" id="pagesheet"/>
   <!-- CSS old: implied media="all" -->
   <link rel="stylesheet" href="/css/style-new.css?v=300">
   <!-- JS includes -->
