--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ document.createElement("article" );
 <br>
 <li><a class="link-homepage-feature" href="http://vue.annenberginstitute.org/issues/38/college-readiness">College Readiness Indicator Systems Framework</a></li> 
 
-<li><a class="link-homepage-feature" href="http://gardnercenter.stanford.edu/resources/publications/PYDinRWC2013.pdf">Positive Youth Development in Redwood City, 2012-2013</a></li>
+<li><a class="link-homepage-feature" href="http://gardnercenter.stanford.edu/resources/publications/GGUSDIssueBrief.pdf">Examining Students' Math Course-Taking & Educational Outcomes in GGUSD</a></li>
 
 <li><a class="link-homepage-feature" href="http://gardnercenter.stanford.edu/resources/reports/ECE_Linkages_TOCReport_2013.pdf" class="link-no-underline">Early Childhood Community School Linkages</a></li>
 
@@ -116,15 +116,15 @@ document.createElement("article" );
 				</div>
 				<div class="feature_text">
 					<p>
-						&nbsp;<br> 
-                                                <a class="link-homepage-feature" href="http://us2.campaign-archive2.com/?u=4330677cca2ba362b611d7468&id=b8b2a5a00f&e=b52d7b9981">
-						Prudence Carter Elected Member of the National Academy of Education<br><br>
+						&nbsp; 
+                                                <a class="link-homepage-feature" href="https://ed.stanford.edu/news/stanfords-gardner-center-partners-calif-schools-new-reform-plan">
+					Gardner Center teams up with CA schools on new standards to measure success<br><br>
                                                 </a>	
-         <a class="link-homepage-feature" href="http://www.ed.gov/news/press-releases/obama-administration-approves-nclb-waiver-request-california-core-districts">
-						NCLB Waiver Request for California CORE Districts Approved
+         <a class="link-homepage-feature" href="https://ed.stanford.edu/news/two-stanford-gse-professors-elected-national-academy-education">
+						Prudence Carter elected to National Academy of Education
                                                 </a>	<br> <br>
-<a class="link-homepage-feature" href="https://ed.stanford.edu/news/data-action-community-approach-improving-youth-outcomes">
-						From Data to Action Book </a>
+<a class="link-homepage-feature" href="https://ed.stanford.edu/news/photos-expose-where-kids-feel-safest-school">
+						Photos expose where youth feel safest at school</a>
 
 					<br>
                                        
@@ -142,8 +142,7 @@ document.createElement("article" );
 					<p>
 
                               
-	  <li><a class="link-homepage-feature" href="http://edpolicy.stanford.edu/events/1017">2013-2014<br>
-Brown Bag Seminar Series</a><br><br>					
+	  <li><a class="link-homepage-feature" href="http://edpolicy.stanford.edu/events/1061">Brown Bag Seminar: Carol Dweck<br>Mindsets: Increasing Educational Equity & Opportunity</a><br><br>					
 
 
 
