--- a/our_work/content-allwork.html
+++ b/our_work/content-allwork.html
@@ -34,6 +34,7 @@
 	  <h1 class="content-text-header">E</h1>
 		<ul style="list-style: none;">
 			<li><a href="ece.html">Early Childhood Education Linkages</a></li>
+<li><a href="elmi.html">Early Learning Mathematics Initiative</a></li>
 <li><a href="oepacollaborative.html">East Palo Alto Youth Empowerment Strategies for Success</a></li>
 			<li><a href="mapping.html">East Palo  Alto Youth Resource Mapping</a></li>
 			<li><a href="youth_art_music.html">East Palo Alto Arts, Music and Cultural Center</a></li>
@@ -44,6 +45,7 @@
 
                <h1 class="content-text-header">F-L</h1>
 		<ul style="list-style: none;">
+<li><a href="feip.html">Family Engagement Impact Project</a></li>
 <li><a href="gardengrove.html">Garden Grove Unified School District</a></li>
 		</ul><br>
 <hr class="short-rule">
