--- a/our_work/content-gardengrove.html
+++ b/our_work/content-gardengrove.html
@@ -19,7 +19,11 @@
 </ul>
 <br>
 
+      <h1 class="content-text-header">Publications</h1>
 
+<ul>
+<li>Examining Students' Math Course-Taking and Educational Outcomes in the Garden Grove Unified School District (Year 1)(<a href="/resources/publications/GGUSDIssueBrief.pdf" class="link-no-underline">Issue Brief</a>)
+<li>Examining Students' Math Course-Taking and Educational Outcomes in the Garden Grove Unified School District (Year 1)(<a href="/resources/publications/GGUSDSnapshot.pdf" class="link-no-underline">Snapshot</a>)
 </ul>
     </div> <!--end right side box div-->
     </aside>
@@ -27,7 +31,7 @@
 
 
 
-<p> Garden Grove Unified School District (GGUSD) is the 11th largest district in California, with 67 operational schools and approximately 48,000 enrolled students. The student population is ethnically diverse and predominantly low income; nearly half of the students are English Language Learners. While a strong, district-wide culture of evaluative inquiry and practices persists, budgetary and human resources constraints hinder GGUSD's ability to use data regularly and in more efficient ways. Our partnership affords teh structure and supports necessary for GGUSD to examine data for ongoing inquiry, decision making, and reforms aimed at the system (district), setting (classroom), and individual (student) levels.</p>
+<p> Garden Grove Unified School District (GGUSD) is the 11th largest district in California, with 67 operational schools and approximately 48,000 enrolled students. The student population is ethnically diverse and predominantly low income; nearly half of the students are English Language Learners. While a strong, district-wide culture of evaluative inquiry and practices persists, budgetary and human resources constraints hinder GGUSD's ability to use data regularly and in more efficient ways. Our partnership affords the structure and supports necessary for GGUSD to examine data for ongoing inquiry, decision making, and reforms aimed at the system (district), setting (classroom), and individual (student) levels.</p>
 <br>
 GGUSD has identified two key research questions to guide our work:
 <br>
