--- a/resources/content-issue-briefs.html
+++ b/resources/content-issue-briefs.html
@@ -5,6 +5,10 @@
         <div class="jgc-content-feature-item-left">
            <h1 class="title-page-header-big">Issue Briefs</h1>
 <br>
+<span class="content-bold">2014</span>
+<ul style="list-style: none;">
+<li><a href="/resources/publications/GGUSDIssueBrief.pdf" class="link-no-underline">Examining Students' Math Course-Taking & Educatoinal Outcomes in the Garden Grove Unified School District (Year 1)</a></li>
+<br>
 <span class="content-bold">2013</span>
 <ul style="list-style: none;">
 <li><a href="/resources/publications/PYDinRWC2013.pdf" class="link-no-underline">Positive Youth Development in Redwood City, 2012-2013</a></li>
