--- a/about_jgc/welcome.new2.html
+++ b/about_jgc/welcome.new2.html
@@ -1,10 +1,10 @@
 <!doctype html>  
 <head>
-  <!--#include virtual="/content-head-new-sub.html" -->
+  <!--#include virtual="/content-head-new2.html" -->
 </head>
 
 <body>
-<!--#include virtual="/content-menu-top-new-sub.html" -->
+<!--#include virtual="/content-menu-top-new2.html" -->
 <!--#include virtual="content-welcome.html" -->
 <!--#include virtual="/content-footer.html" -->
 <!--#include virtual="/content-analytics.html" -->
