--- a/our_work/content-research.html
+++ b/our_work/content-research.html
@@ -32,6 +32,7 @@
 	   
 	  <h1 class="content-text-header">E</h1>
 		<ul style="list-style: none;">
+ <li><a href="elmi.html">Early Learning Mathematics Initiative</a></li>
    <li><a href="oepacollaborative.html">East Palo Alto Youth Empowerment Strategies for Success</a></li>
 			<li><a href="ece.html">Early Childhood Education Linkages</a></li>
 			<li><a href="english_learner.html">English Learner After School Program Participation in Redwood City</a></li>
@@ -39,9 +40,11 @@
 		</ul><br>
 	  <hr class="short-rule">
 	   
-	  <h1 class="content-text-header">F</h1><br>
+	  <h1 class="content-text-header">F</h1>
+<ul style="list-style: none;">
+<li><a href="feip.html"> Family Engagement Impact Project</a></li>
           <hr class="short-rule">
-	  
+	  <br>
 <h1 class="content-text-header">G</h1>
 		<ul style="list-style: none;">
     <li><a href="gardengrove.html">Garden Grove Unified School District</a></li>
