--- a/resources/content-snapshots.html
+++ b/resources/content-snapshots.html
@@ -4,7 +4,10 @@
 
         <div class="jgc-content-feature-item-left">
           <h1 class="title-page-header-big">Snapshots</h1>
-
+<br>
+<span class="content-bold">2014</span>
+<ul style="list-style: none;">
+<li><a href="/resources/publications/GGUSDSnapshot.pdf" class="link-no-underline">Examining Students' Math Course-Taking & Educational Outcomes in the Garden Grove Unified School District (Year 1)</a></li>
 <br>
 <span class="content-bold">2013</span>
 <ul style="list-style: none;">
